# epstein_files_qna

./: .gitignore  README.md  app.py  pyproject.toml  rag_workflow.ipynb
data/: sample.md  sample.txt
notebooks/: rag_workflow.ipynb
scripts/: capture_demo.py
src/: config.py  download.py  rag.py
